# GenAI-Project

./: README.md  scrape_ltk_posts.py
fit_finder/: .gitignore  README.md  pyproject.toml
fit_finder/src/fit_finder/: crew.py  main.py
fit_finder/src/fit_finder/tools/: image_scraper.py
