[project]
name = "fit_finder"
version = "0.1.0"
description = "fit_finder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
fit_finder = "fit_finder.main:run"
run_crew = "fit_finder.main:run"
train = "fit_finder.main:train"
replay = "fit_finder.main:replay"
test = "fit_finder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
